SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Contract__c/SaaSOptics_Contract__c.object-meta.xml
<CustomObject>
    <label>SaaSOptics Contract</label>
    <nameField>
        <label>SaaSOptics Contract Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SaaSOptics Contracts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>