SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Contract__c/fields/SaaSOptics_Billing_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Billing_Account_Number__c</fullName>
    <label>Billing: Account Number</label>
    <length>99</length>
    <type>Text</type>
</CustomField>