SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Contract__c/fields/SaaSOptics_Billing_Alt_Contact__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Billing_Alt_Contact__c</fullName>
    <label>Billing: Alt. Contact</label>
    <length>41</length>
    <type>Text</type>
</CustomField>