SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Contract__c/fields/SaaSOptics_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Billing_Country__c</fullName>
    <label>Billing: Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>