SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Contract__c/fields/SaaSOptics_Billing_First_Name__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Billing_First_Name__c</fullName>
    <label>Billing: First Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>