SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Contract__c/fields/SaaSOptics_Billing_Sales_Rep_QuickBooks__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Billing_Sales_Rep_QuickBooks__c</fullName>
    <label>Billing: Sales Rep (QuickBooks Field)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>