SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Contract__c/fields/SaaSOptics_Billing_State_Province__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Billing_State_Province__c</fullName>
    <label>Billing: State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>