SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Contract__c/fields/SaaSOptics_Contract_Custom_Field_2_Text__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Contract_Custom_Field_2_Text__c</fullName>
    <label>Custom Field 2 (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>