SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Contract__c/fields/SaaSOptics_Contract_Email__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Contract_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>