SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Contract__c/fields/SaaSOptics_Contract_Lead_Date__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Contract_Lead_Date__c</fullName>
    <label>Lead Date</label>
    <type>Date</type>
</CustomField>