SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Contract__c/fields/SaaSOptics_Contract_Notes__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Contract_Notes__c</fullName>
    <label>Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>