SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Contract__c/fields/SaaSOptics_Contract_Permit_Imbalance__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Contract_Permit_Imbalance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permit Imbalance</label>
    <type>Checkbox</type>
</CustomField>