SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Contract__c/fields/SaaSOptics_Contract_SaaSOptics_Id__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Contract_SaaSOptics_Id__c</fullName>
    <externalId>true</externalId>
    <label>SaaSOptics Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>