SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Contract__c/fields/SaaSOptics_Customer_SalesforceID__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Customer_SalesforceID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SaaSOptics Contracts</relationshipLabel>
    <relationshipName>SaaSOptics_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>