SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Contract__c/fields/SaaSOptics_Register_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Register_Currency_Code__c</fullName>
    <label>Register: Currency Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>