SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SaaSOptics_Customer_SalesforceID__c</columns>
    <columns>SaaSOptics_Contract_Channel__c</columns>
    <columns>SaaSOptics_Contract_Lead_Source__c</columns>
    <columns>SaaSOptics_Contract_Lead_Date__c</columns>
    <columns>SaaSOptics_Contract_Notes__c</columns>
    <columns>SaaSOptics_Contract_SaaSOptics_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>